[Win] Compile fixes with video not enabled. https://bugs.webkit.org/show_bug.cgi?id=130597

Patch by Alex Christensen <achristensen@webkit.org> on 2014-03-21
Reviewed by Darin Adler.

Source/WebCore:

* DerivedSources.make:
Only generate UserAgentScripts.h if needed.
* platform/audio/MediaSession.cpp:
* platform/audio/MediaSessionManager.cpp:
Only compile if video is enabled.

Source/WebKit:

* WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:
Only include MediaSessionManager symbols if video is enabled.

Canonical link: https://commits.webkit.org/148626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166085 268f45cc-cd09-0410-ab3c-d52691b4dbfc